--- a/DigitalTwin.Prototype/DigitalTwin.Prototype.csproj
+++ b/DigitalTwin.Prototype/DigitalTwin.Prototype.csproj
@@ -3,6 +3,16 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <ItemGroup>
+      <ProjectReference Include="../Simulation.Core/Simulation.Core.csproj" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <NoWarn>CSE0003;CC0038;IDE0008;CC0035;CC0045;CC0042;CC0076;MA0011;CC0047;</NoWarn> 
   </PropertyGroup>
 
 </Project>
