--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "${workspaceFolder}/DigitalTwin.Prototype/bin/Debug/netcoreapp3.1/DigitalTwin.Prototype.dll",
             "args": [],
             "cwd": "${workspaceFolder}/DigitalTwin.Prototype",
-            "console": "internalConsole",
+            "console": "integratedTerminal",
             "stopAtEntry": false
         },
         {
